# stirling-approximation

./: Cargo.toml  README.md
src/: lib.rs
